# AI-Todo-Full-stack-app

./: .gitignore  CLAUDE.md  QUICKSTART.md  QWEN.md  README.md  docker-compose.yml  k8s-deployment.md  migrate_db.py  verify_schema.py
backend/: .dockerignore  CLAUDE.md  Dockerfile  db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/auth/: __init__.py  dependencies.py  routes.py  schemas.py  service.py
backend/routes/: tasks.py
backend/sample/chatbot-backend/: .dockerignore  DB_SETUP.md  Dockerfile  README.md  connection.py  main.py  pyproject.toml  requirements.txt
backend/sample/chatbot-backend/api/: auth.py  ingestion.py  rag.py  search.py  sessions.py
backend/sample/chatbot-backend/exceptions/: __init__.py
backend/sample/chatbot-backend/ingestion/: cli.py  (+6 more)
backend/src/agents/: runner.py
backend/src/api/: tasks.py
backend/src/config/: __init__.py
backend/src/mcp/: server.py  tools.py
backend/src/models/: chat.py  event.py  job.py  task.py
backend/src/routes/: chat.py  session.py
backend/src/sample/: connection.py  main.py
backend/src/services/: chat_service.py  dapr_client.py  event_publisher.py  event_validator.py  recurrence.py  task_service.py
backend/src/utils/: logging.py
backend/tests/: conftest.py  test_api.py  test_basic.py  test_routes.py
backend/tests/contract/: test_openapi.py
backend/tests/e2e/: test_end_to_end.py
backend/tests/integration/: test_event_flow.py
backend/tests/unit/: test_recurrence.py  test_reminders.py
backend/todo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+150 files in other folders)
